meta/src/optimizer/snapshots/pest_meta__optimizer__restorer__tests__restore_choice_branch_with_and_branch_without.snap
---
source: meta/src/optimizer/restorer.rs
expression: "restore_on_err(rules[0].clone(), &to_hash_map(&rules))"
---
OptimizedRule {
    name: "rule",
    ty: Normal,
    expr: Choice(
        RestoreOnErr(
            Push(
                Str(
                    "a",
                ),
            ),
        ),
        Str(
            "a",
        ),
    ),
}
