meta/src/optimizer/snapshots/pest_meta__optimizer__restorer__tests__restore_with_child_stack_ops.snap
---
source: meta/src/optimizer/restorer.rs
expression: "restore_on_err(rules[0].clone(), &to_hash_map(&rules))"
---
OptimizedRule {
    name: "rule",
    ty: Normal,
    expr: Rep(
        RestoreOnErr(
            Push(
                Str(
                    "a",
                ),
            ),
        ),
    ),
}
